--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-pinterest": "^1.0.0",
     "passport-twitter-oauth2": "^2.1.1"
   },
   "devDependencies": {
