--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-pinterest": "^1.0.0",
-    "passport-twitter-oauth2": "^2.1.1"
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
